# CacheFlux

./: .gitignore  README.md  config.toml  csv_to_sql.py  droo_data.py  env.ps1  genarate_npy_data.py  get_droo_input_data.py  infer.py  my.ini  old_train.py  pixi.toml  pyproject.toml  ruff.toml  train.ps1  train.py  train.sh
ckpts/latest.pth/: config.json  model.pth
data/质量约束下的成本调度数据v0.2版/: cache组信息_v0.2.csv  省份劫持_v0.2.csv  节点信息_v0.2.csv  覆盖信息_v0.2.csv  覆盖可用cache组_v0.2.csv  质量等级信息_v0.2.csv
models/: Network.py  UserReq.py  __init__.py  plNetwork.py
optimization/: SharedMemory.py  optimization.py  optimizationWithSlack.py  optimization_slack.py  solutions.py
utils/: DataFrameUtils.py  ProgressBarControlller.py  clean.py  config.py  constants.py  func.py  logger.py  npy_data.py  sql.py
