[project]
name = "CacheFlux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pandas-stubs",
    "scipy",
    "scipy-stubs",
    "ruff",
    "matplotlib",
    "matplotlib-stubs",
    "pulp",
    "pathlib",
    "rich",
    "mypy",
    "uv",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
  "torchvision",
  "pytorch-lightning"
]
cu126 = [
  "torch>=2.6.0",
  "torchvision",
  "pytorch-lightning"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
  ]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirror.nju.edu.cn/pytorch/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://mirror.nju.edu.cn/pytorch/whl/cu126/"
explicit = true
